--- a/SudokuNinja/SudokuNinja.csproj
+++ b/SudokuNinja/SudokuNinja.csproj
@@ -53,6 +53,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SudokuCellControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="SudokuCellControl.Designer.cs">
+      <DependentUpon>SudokuCellControl.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="MainNinjaForm.resx">
       <DependentUpon>MainNinjaForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -65,6 +71,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="SudokuCellControl.resx">
+      <DependentUpon>SudokuCellControl.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
