--- a/SudokuGridControl/SudokuGridControl.csproj
+++ b/SudokuGridControl/SudokuGridControl.csproj
@@ -48,11 +48,20 @@
       <DependentUpon>SudokuCell.cs</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SudokuStandardGrid.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="SudokuStandardGrid.Designer.cs">
+      <DependentUpon>SudokuStandardGrid.cs</DependentUpon>
+    </Compile>
     <Service Include="{94E38DFF-614B-4cbd-B67C-F211BB35CE8B}" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="SudokuCell.resx">
       <DependentUpon>SudokuCell.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="SudokuStandardGrid.resx">
+      <DependentUpon>SudokuStandardGrid.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
