--- a/SudokuGridControl/SudokuGridControl.csproj
+++ b/SudokuGridControl/SudokuGridControl.csproj
@@ -48,6 +48,7 @@
       <DependentUpon>SudokuCell.cs</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SudokuCellData.cs" />
     <Compile Include="SudokuStandardGrid.cs">
       <SubType>UserControl</SubType>
     </Compile>
