--- a/SudokuGridControl/SudokuGridControl.csproj
+++ b/SudokuGridControl/SudokuGridControl.csproj
@@ -41,6 +41,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="PopupNumberPanel.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PopupNumberPanel.Designer.cs">
+      <DependentUpon>PopupNumberPanel.cs</DependentUpon>
+    </Compile>
     <Compile Include="SudokuCell.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -58,6 +64,9 @@
     <Service Include="{94E38DFF-614B-4cbd-B67C-F211BB35CE8B}" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="PopupNumberPanel.resx">
+      <DependentUpon>PopupNumberPanel.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="SudokuCell.resx">
       <DependentUpon>SudokuCell.cs</DependentUpon>
     </EmbeddedResource>
