--- a/SudokuNinja/SudokuNinja.csproj
+++ b/SudokuNinja/SudokuNinja.csproj
@@ -62,6 +62,7 @@
     <Compile Include="ProgramAttributesTmplt.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PuzzleCollection.cs" />
+    <Compile Include="SudokuCellData.cs" />
     <EmbeddedResource Include="AboutForm.resx">
       <DependentUpon>AboutForm.cs</DependentUpon>
     </EmbeddedResource>
